--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 
-  <h1>Interaciton Design Tools</h1>
+  <h1>Interaction Design Tools</h1>
 
-    <p>A list of interacion design tools.</p>
+    <p>A list of interaction design tools.</p>
 
     <ul>
       <li>
@@ -21,7 +21,7 @@
         <a href="http://balsamiq.com">Balsamiq</a>
       </li>
       <li>
-        <a href="http://gaveabrief.com">Briefs</a>
+        <a href="http://giveabrief.com">Briefs</a>
       </li>
       <li>
         <a href="http://flinto.com">Flinto</a>
@@ -60,13 +60,13 @@
         <a href="http://protoshare.com">Protoshare</a>
       </li>
       <li>
-        <a href="https://developer.apple.com/technologies/mac/graphics-and-animation.html"></a>
+        <a href="https://developer.apple.com/technologies/mac/graphics-and-animation.html">Quartz Composer</a>
       </li>
       <li>
         <a href="http://solidifyapp.com">Solidify</a>
       </li>
       <li>
-        <a href="http://webflow.com">webflow</a>
+        <a href="http://webflow.com">Webflow</a>
       </li>
     </ul>
 
